[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/MainScreen.gd" type="Script" id=4]

[node name="Simulation" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.231373, 0.584314, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options_Button" type="Button" parent="."]
margin_right = 100.0
margin_bottom = 20.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reload" type="Button" parent="."]
margin_left = 1224.0
margin_right = 1279.0
margin_bottom = 20.0
text = "Reload"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fish" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options_Background" type="ColorRect" parent="."]
visible = false
margin_top = 20.0
margin_right = 300.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 0.47451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="HBoxContainer" parent="."]
visible = false
margin_top = 20.0
margin_right = 300.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names" type="VBoxContainer" parent="Options"]
margin_right = 148.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Num_Fish" type="RichTextLabel" parent="Options/Names"]
margin_right = 148.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="Num_Types" type="RichTextLabel" parent="Options/Names"]
margin_top = 20.0
margin_right = 148.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="Max_Speed" type="RichTextLabel" parent="Options/Names"]
margin_top = 40.0
margin_right = 148.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="View_Radius" type="RichTextLabel" parent="Options/Names"]
margin_top = 60.0
margin_right = 148.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="View_Angle" type="RichTextLabel" parent="Options/Names"]
margin_top = 80.0
margin_right = 148.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="Borders" type="RichTextLabel" parent="Options/Names"]
margin_top = 100.0
margin_right = 148.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="Alignment" type="RichTextLabel" parent="Options/Names"]
margin_top = 120.0
margin_right = 148.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="Avoidance" type="RichTextLabel" parent="Options/Names"]
margin_top = 140.0
margin_right = 148.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="Cohesion" type="RichTextLabel" parent="Options/Names"]
margin_top = 160.0
margin_right = 148.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="Sliders" type="VBoxContainer" parent="Options"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Num_Fish" type="HSlider" parent="Options/Sliders"]
margin_right = 148.0
margin_bottom = 16.0
min_value = 10.0
max_value = 150.0
step = 5.0
value = 90.0

[node name="Num_Types" type="HSlider" parent="Options/Sliders"]
margin_top = 20.0
margin_right = 148.0
margin_bottom = 36.0
min_value = 1.0
max_value = 10.0
value = 3.0

[node name="Max_Speed" type="HSlider" parent="Options/Sliders"]
margin_top = 40.0
margin_right = 148.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 50.0
max_value = 1000.0
step = 25.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View Radius" type="HSlider" parent="Options/Sliders"]
margin_top = 60.0
margin_right = 148.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 40.0
max_value = 640.0
step = 10.0
value = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="View Angle" type="HSlider" parent="Options/Sliders"]
margin_top = 80.0
margin_right = 148.0
margin_bottom = 96.0
max_value = 360.0

[node name="Borders" type="HSlider" parent="Options/Sliders"]
margin_top = 100.0
margin_right = 148.0
margin_bottom = 116.0
max_value = 20.0
step = 1.0

[node name="Alignment" type="HSlider" parent="Options/Sliders"]
margin_top = 120.0
margin_right = 148.0
margin_bottom = 136.0

[node name="Avoidance" type="HSlider" parent="Options/Sliders"]
margin_top = 140.0
margin_right = 148.0
margin_bottom = 156.0

[node name="Cohesion" type="HSlider" parent="Options/Sliders"]
margin_top = 160.0
margin_right = 148.0
margin_bottom = 176.0
max_value = 50.0
[connection signal="pressed" from="Options_Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Reload" to="." method="_on_Reload_pressed"]
[connection signal="value_changed" from="Options/Sliders/Num_Fish" to="." method="_on_Num_Fish_value_changed"]
[connection signal="value_changed" from="Options/Sliders/Num_Types" to="." method="_on_Num_Types_value_changed"]
[connection signal="value_changed" from="Options/Sliders/Max_Speed" to="." method="_on_Max_Speed_value_changed"]
[connection signal="value_changed" from="Options/Sliders/View Radius" to="." method="_on_View_Radius_value_changed"]
[connection signal="value_changed" from="Options/Sliders/View Angle" to="." method="_on_View_Angle_value_changed"]
[connection signal="value_changed" from="Options/Sliders/Borders" to="." method="_on_Borders_value_changed"]
[connection signal="value_changed" from="Options/Sliders/Alignment" to="." method="_on_Alignment_value_changed"]
[connection signal="value_changed" from="Options/Sliders/Avoidance" to="." method="_on_Avoidance_value_changed"]
[connection signal="value_changed" from="Options/Sliders/Cohesion" to="." method="_on_Cohesion_value_changed"]
